# bib2forester

./: .gitignore  CHANGELOG.md  README.md  all.bib  bib2forester.py  build.sh  default.nix  flake.nix  pyproject.toml
bibs/: adamek-1994-locally.tree  alvarez-picallo-2020-change.tree  alvarezpicallo-2020-change.tree  amin-2016-essence.tree  anders-1967-limit.tree  angiuli-2016-homotopical.tree  arnol'd-2013-mathematical.tree  arnold-2013-mathematical.tree  baez-1992-introduction.tree  baez-2001-from.tree  baez-2016-compositional.tree  baez-2018-compositional.tree  baez-2020-structured.tree  baez-2021-open.tree  baez-2023-categorical.tree  baez-2023-compositional.tree  bakirtzis-2021-categorical.tree  bar-yam-2018-inherent.tree  barakat-2022-compilerforcap.tree  barr-2005-toposes,.tree  barr-2005-toposes.tree  baryam-2018-inherent.tree  beck-1969-distributive.tree  birkhoff-1946-universal.tree  blanchette-2010-nitpick.tree  blanchette-2010-nitpick:.tree  burstall-1980-semantics.tree  bénabou-1985-fibered.tree  capucci-2022-actegories.tree  capucci-2022-towards.tree  capucci-2023-constructing.tree  capucci-2023-diegetic.tree  capucci-2024-organizing.tree  carette-2011-mathscheme.tree  carette-2011-{mathscheme}:.tree  carette-2012-theory.tree  cartmell-1978-generalised.tree  cartmell-1986-generalised.tree  cheli-2021-metatheory.jl:.tree  cheli-2021-metatheoryjl.tree  (+109 more)
src/bib2forester/: __init__.py
